# slice

./: slice.cabal
src/Data/: FloorDiv.hs  Indicable.hs  Range.hs  RangeThen.hs  Slice.hs
src/Data/Slice/: QuasiQuoter.hs
