name:                slice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/slice#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2022 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.FloorDiv
    , Data.Indicable
    , Data.Range
    , Data.RangeThen
    , Data.Slice
    , Data.Slice.QuasiQuoter
  build-depends:
      base >= 4.7 && < 5
    , data-default-class >= 0.0.1
    , haskell-src-exts >= 0.2.1
    , parsec >=3.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/slice
